<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background_color"
    tools:context=".module.device.DeviceInfoActivity">

    <!-- 标题栏 -->
    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/universal_title_marginTop"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/universal_title_iv_width"
            android:layout_height="@dimen/universal_title_iv_width"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/universal_title_iv_marginStart"
            android:src="?arrowBack_src"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/devices_title_tv_marginStart"
            android:text="@string/device_index_info_tv"
            android:textColor="?textColor"
            android:textSize="@dimen/universal_title_tv_textSize"/>
    </LinearLayout>

    <!-- 设备编号 -->
    <TextView
        android:id="@+id/label_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/device_info_marginStart"
        android:layout_marginTop="@dimen/device_info_machineNo_marginTop"
        android:text="@string/device_info_deviceNo"
        android:textColor="?textColor"
        android:textSize="@dimen/device_info_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_title"/>

    <TextView
        android:id="@+id/devices_tv_machineNO_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="?textColor"
        android:textSize="@dimen/device_info_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_no"
        android:layout_marginEnd="@dimen/devices_info_tv_marginStart"/>

    <!-- Android版本 -->
    <TextView
        android:id="@+id/label_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/device_info_marginStart"
        android:layout_marginTop="@dimen/device_info_marginTop"
        android:text="@string/device_info_androidVersion"
        android:textColor="?textColor"
        android:textSize="@dimen/device_info_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_no"/>

    <TextView
        android:id="@+id/devices_tv_androidVersion_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="?textColor"
        android:textSize="@dimen/device_info_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_android"
        android:layout_marginEnd="@dimen/devices_info_tv_marginStart"/>

    <!-- 软件版本 -->
    <TextView
        android:id="@+id/label_soft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/device_info_marginStart"
        android:layout_marginTop="@dimen/device_info_marginTop"
        android:text="@string/device_info_softwareVersion"
        android:textColor="?textColor"
        android:textSize="@dimen/device_info_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_android"/>

    <TextView
        android:id="@+id/devices_tv_softwareNO_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="?textColor"
        android:textSize="@dimen/device_info_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_soft"
        android:layout_marginEnd="@dimen/devices_info_tv_marginStart"/>

    <!-- WIFI MAC -->
    <TextView
        android:id="@+id/label_wifi_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/device_info_marginStart"
        android:layout_marginTop="@dimen/device_info_marginTop"
        android:text="@string/device_info_mac_wifi"
        android:textColor="?textColor"
        android:textSize="@dimen/device_info_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_soft"/>

    <TextView
        android:id="@+id/devices_tv_macAddressWifi_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="?textColor"
        android:textSize="@dimen/device_info_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_wifi_mac"
        android:layout_marginEnd="@dimen/devices_info_tv_marginStart"/>

    <!-- 蓝牙MAC -->
    <TextView
        android:id="@+id/label_bt_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/device_info_marginStart"
        android:layout_marginTop="@dimen/device_info_marginTop"
        android:text="@string/device_info_mac_bluetooth"
        android:textColor="?textColor"
        android:textSize="@dimen/device_info_textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_wifi_mac"/>

    <TextView
        android:id="@+id/devices_tv_macAddressBluetooth_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="?textColor"
        android:textSize="@dimen/device_info_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_bt_mac"
        android:layout_marginEnd="@dimen/devices_info_tv_marginStart"/>

</androidx.constraintlayout.widget.ConstraintLayout>