<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background_color"
    tools:context=".module.device.DeviceStorageActivity">

    <!-- 顶部标题栏（沿用原有LinearLayout结构，和示例保持一致） -->
    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/universal_title_marginTop"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/universal_title_iv_width"
            android:layout_height="@dimen/universal_title_iv_width"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/universal_title_iv_marginStart"
            android:src="?arrowBack_src"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/devices_title_tv_marginStart"
            android:text="@string/device_storage_title"
            android:textColor="?textColor"
            android:textDirection="ltr"
            android:textSize="@dimen/universal_title_tv_textSize"/>
    </LinearLayout>

    <!-- 外层容器：整体居中，标题栏下方 -->
    <LinearLayout
        android:id="@+id/ll_storage_wrapper"
        android:layout_width="@dimen/storage_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_title"
        android:layout_marginTop="@dimen/storage_paddingTop">

        <!-- 内部存储图标 + 文字行 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/title_IV"
                android:layout_width="0dp"
                android:layout_height="@dimen/device_storage_image_height"
                android:layout_weight="2"
                android:paddingTop="15dp"
                android:src="?storage_title_iv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_storage_internal"
                android:textColor="?textColor"
                android:textDirection="ltr"
                android:textSize="@dimen/storage_title_textSize"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"/>
        </LinearLayout>

        <!-- 总容量色块 + 文字行 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/storage_color_total"
                android:layout_width="@dimen/device_storage_height"
                android:layout_height="@dimen/device_storage_height"
                android:layout_gravity="center_vertical"
                android:background="?storage_totalcolor"/>

            <TextView
                android:id="@+id/storage_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/storage_summary_marginStart"
                android:text="@string/device_storage_total"
                android:textColor="?textColor"
                android:textDirection="ltr"
                android:textSize="@dimen/storage_summary_textSize"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>